css反映のためheadを追加

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<div class="header">
-  <div class="header-logo">Ocean Repair</div>
-  <div class="header-list">
-    <ul>
-      <li>ショップ</li>
-      <li>商品紹介</li>
-      <li>お問い合わせ</li>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Ocean Repair</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- ここの構造はそのまま残します -->
+  <div class="header">
+    <div class="header-logo">Ocean Repair</div>
+    <div class="header-list">
+      <ul>
+        <li>ショップ</li>
+        <li>商品紹介</li>
+        <li>お問い合わせ</li>
       </ul>
+    </div>
   </div>
-</div>
+
+</body>
+</html>
