--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 
-  <!-- ここの構造はそのまま残します -->
   <div class="header">
     <div class="header-logo">Ocean Repair</div>
     <div class="header-list">
@@ -18,6 +17,12 @@
       </ul>
     </div>
   </div>
+   <div class="main">
+      
+    </div>
+
+    <div class="footer">
+        </div>
 
 </body>
 </html>
