--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     </div>
 
     <div class="footer">
+       <div class="footer-logo">OceanRepair</div>
+       <div class="footer-list">
+        <ul>
+          <li>会社概要</li>
+          <li>採用</li>
+          <li>お問い合わせ</li>
+        </ul>
+      
         </div>
 
 </body>
