タイトル文字の追加

--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
       </ul>
     </div>
   </div>
+
    <div class="main">
       
     </div>
+    <div class="copy-container">
+        <h1>塗装、接着で不具合を解決</h1>
+        <h2>特許技術による日本で1番の接着技術で
+独自技術で様々な素材の接着、補修、防水、防食を実現。</h2>
+        </div>
 
     <div class="footer">
        <div class="footer-logo">OceanRepair</div>
